# dehumidifier-advisor

./: .gitignore  README.md  main.py  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yaml
src/dehumidifier_adviser/: __init__.py  geocoding.py  models.py  scenarios.py  weather.py
src/example_pkg/: __init__.py
src/humidity_simulator_client/: __init__.py  client.py  models.py
tests/: test_dehumidifier_adviser.py  test_example_pkg.py  test_geocoding.py
